infrastructure/kubernetes/system/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: strategy-game
    labels:
        name: strategy-game
