infrastructure/kubernetes/system/fluentd.yml


apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: fluentd
    namespace: strategy-game
    labels:
        app: fluentd
spec:
    selector:
        matchLabels:
            app: fluentd
    template:
        metadata:
            labels:
                app: fluentd
        spec:
            serviceAccount: fluentd
            serviceAccountName: fluentd
            tolerations:
                -   key: node-role.kubernetes.io/master
                    effect: NoSchedule
            containers:
                -   name: fluentd
                    image: fluent/fluentd-kubernetes-daemonset:v1.4.2-debian-elasticsearch-1.1
                    resources:
                        limits:
                            memory: 512Mi
                        requests:
                            cpu: 100m
                            memory: 200Mi
                    volumeMounts:
                        -   name: varlog
                            mountPath: /var/log
                        -   name: varlibdockercontainers
                            mountPath: /var/lib/docker/containers
                            readOnly: true
            volumes:
                -   name: varlog
                    hostPath:
                        path: /var/log
                -   name: varlibdockercontainers
                    hostPath:
                        path: /var/lib/docker/containers
