infrastructure/kubernetes/system/04_application_local_image.yml


apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: strategy-game
    labels:
        name: app
spec:
    replicas: 1
    selector:
        matchLabels:
            name: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                name: app
        spec:
            containers:
                -   name: strategy-game-app
                    image: strategy-game:0.4.0
                    ports:
                        -   containerPort: 8080
                        -   containerPort: 8443
                    resources: { }
                    volumeMounts:
                        -   mountPath: /log
                            name: app-logs
            restartPolicy: Always
            volumes:
                -   name: app-logs
                    persistentVolumeClaim:
                        claimName: app-logs


---


apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: strategy-game
    labels:
        name: app
spec:
    type: NodePort
    selector:
        name: app
    ports:
        - name: "8080"
          port: 8080
          targetPort: 8080
        - name: "8443"
          port: 8443
          targetPort: 8443
