infrastructure/kubernetes/system/grafana.yml


apiVersion: apps/v1
kind: Deployment
metadata:
    name: grafana
    namespace: strategy-game
    labels:
        name: grafana
spec:
    replicas: 1
    selector:
        matchLabels:
            name: grafana
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                name: grafana
        spec:
            containers:
                -   image: grafana/grafana:9.2.1
                    name: grafana
                    ports:
                        -   containerPort: 3000
                    securityContext:
                        runAsUser: 104
                    volumeMounts:
                        -   mountPath: /etc/grafana/provisioning/datasources
                            name: prometheus-datasource-volume
                        -   mountPath: /var/lib/grafana
                            name: grafana-data-volume
            restartPolicy: Always
            volumes:
                -   name: prometheus-datasource-volume
                    configMap:
                        defaultMode: 420
                        name: grafana-datasource-config
                -   name: grafana-data-volume
                    persistentVolumeClaim:
                        claimName: grafana-data-volume


---


apiVersion: v1
kind: Service
metadata:
    name: grafana
    namespace: strategy-game
    labels:
        name: grafana
spec:
    selector:
        name: grafana
    ports:
        -   name: "3000"
            port: 3000
            targetPort: 3000
