infrastructure/kubernetes/system/prometheus.yml


apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus
    namespace: strategy-game
    labels:
        name: prometheus
spec:
    replicas: 1
    selector:
        matchLabels:
            name: prometheus
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                name: prometheus
        spec:
            containers:
                -   args:
                        - --config.file=/etc/prometheus/prometheus.yml
                    image: prom/prometheus:v2.39.1
                    name: strategy-game-prometheus
                    ports:
                        -   containerPort: 9090
                    volumeMounts:
                        -   mountPath: /etc/prometheus/
                            name: prometheus-config-volume
                        -   mountPath: /prometheus
                            name: prometheus-data-volume
            restartPolicy: Always
            volumes:
                -   name: prometheus-config-volume
                    configMap:
                        defaultMode: 420
                        name: prometheus-config
                -   name: prometheus-data-volume
                    persistentVolumeClaim:
                        claimName: prometheus-data-volume


---


apiVersion: v1
kind: Service
metadata:
    name: prometheus
    namespace: strategy-game
    labels:
        name: prometheus
spec:
    selector:
        name: prometheus
    ports:
        -   name: "9090"
            port: 9090
            targetPort: 9090
